made changes in registration and write post

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SmileMaker">
         <activity
+            android:name=".writepost"
+            android:exported="true" />
+        <activity
             android:name=".viewAllJokes"
             android:exported="true" />
         <activity
