--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SmileMaker">
         <activity
+            android:name=".WallActivity"
+            android:exported="true" />
+        <activity
+            android:name=".Splash"
+            android:exported="true" />
+        <activity
             android:name=".viewAllJokes"
             android:exported="true" />
         <activity
